--- a/SemTask/src/main/resources/templates/weldpoints/selectedweldpoint.html
+++ b/SemTask/src/main/resources/templates/weldpoints/selectedweldpoint.html
@@ -43,55 +43,33 @@
 	</nav>
 	<br/>
 	<div class="table-responsive container">
-		<table class="table text-center table-striped table-bordered">
-			<caption>Selected WeldPoint</caption>
-			<thead>
-				<tr>
-					<th scope="col">Robot Name</th>
-					<th scope="col">Schedule</th>
-					<th scope="col">Error Code</th>
-					<th scope="col">TL</th>
-					<th scope="col">BL</th>
-					<th scope="col">WL</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><span th:text="${selectedweldpoint.robotName}"></span></td>
-					<td><span th:text="${selectedweldpoint.schedule}"></span></td>
-					<td><span th:text="${selectedweldpoint.errorCode}"></span></td>
-					<td><span th:text="${selectedweldpoint.tl}"></span></td>
-					<td><span th:text="${selectedweldpoint.bl}"></span></td>
-					<td><span th:text="${selectedweldpoint.wl}"></span></td>
-				</tr>
-			</tbody>
-		</table>
+		<form th:action="@{/saveweldpoint}" method="POST" th:object="${weldpoint}">
+		<input type="hidden" th:field="*{id}"/>
 		
-		<form th:action="@{/modifyweldpoint}" method="POST">
 		<div class="form-group">
 				<label>Robot Name</label> 
-				<input th:value="${modifiedweldpoint.robotName}" th:field="${modifiedweldpoint.robotName}" required="required" type="text" class="form-control" placeholder="Enter Robot Name">
+				<input th:field="*{robotName}" required="required" type="text" class="form-control" placeholder="Enter Robot Name">
 			</div>
 			<div class="form-group">
 				<label>Schedule</label> 
-				<input th:value="${modifiedweldpoint.schedule}" th:field="${modifiedweldpoint.schedule}" required="required" type="number" min="1" class="form-control" placeholder="Enter Schedule">
+				<input th:field="*{schedule}" required="required" type="number" min="1" class="form-control" placeholder="Enter Schedule">
 			</div>
 			<div class="form-group">
 				<label>Error Code</label> 
-				<input th:value="${modifiedweldpoint.errorCode}" th:field="${modifiedweldpoint.errorCode}" required="required" type="number" min="0" max="6" class="form-control" placeholder="Enter Error Code">
+				<input th:field="*{errorCode}" required="required" type="number" min="0" max="6" class="form-control" placeholder="Enter Error Code">
 			</div>
 		<div class="form-row">
 				<div class="col">
 					<label>TL</label> 
-					<input th:value="${modifiedweldpoint.tl}" th:field="${modifiedweldpoint.tl}" required="required" type="number" step="0.1" class="form-control" placeholder="Enter X">
+					<input th:field="*{tl}" required="required" type="number" step="0.1" class="form-control" placeholder="Enter X">
 				</div>
 				<div class="col">
 					<label>BL</label> 
-					<input th:value="${modifiedweldpoint.bl}" th:field="${modifiedweldpoint.bl}" required="required" type="number" step="0.1" class="form-control" placeholder="Enter Y">
+					<input th:field="*{bl}" required="required" type="number" step="0.1" class="form-control" placeholder="Enter Y">
 				</div>
 				<div class="col">
 					<label>WL</label> 
-					<input th:value="${modifiedweldpoint.tl}" th:field="${modifiedweldpoint.tl}" required="required" type="number" step="0.1" class="form-control" placeholder="Enter Z">
+					<input th:field="*{wl}" required="required" type="number" step="0.1" class="form-control" placeholder="Enter Z">
 				</div>				
 			</div>
 			<br/>
